outward-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flug-service
spec:
  selector:
    app: flug-service
  ports:
  - port: 80
    targetPort: 8080
