outward-service/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flug-service
spec:
  rules:
    - host: flug-service.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flug-service
                port:
                  number: 80
